Updating grid gap value does not recalculate styles https://bugs.webkit.org/show_bug.cgi?id=233252 <rdar://problem/85727334>

Reviewed by Simon Fraser.

Source/WebCore:

Both column and row gap style value change need to initiate layout in order to update their geometries.

Test: fast/dynamic/gap-style-change-should-initiate-layout.html

* rendering/style/RenderStyle.cpp:
(WebCore::rareNonInheritedDataChangeRequiresLayout):

LayoutTests:

* fast/dynamic/gap-style-change-should-initiate-layout-expected.html: Added.
* fast/dynamic/gap-style-change-should-initiate-layout.html: Added.



Canonical link: https://commits.webkit.org/246925@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@289241 268f45cc-cd09-0410-ab3c-d52691b4dbfc